update: namespace export

--- a/typescript-training/src/index.html
+++ b/typescript-training/src/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <p>Hello World!</p>
-    <script src="./app.js"></script>
+    <script src="../build/app.js"></script>
   </body>
 </html>
