--- a/typescript-training/src/index.html
+++ b/typescript-training/src/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
     <p>Hello World!</p>
+    <script src="../build/math1.js"></script>
+    <script src="../build/math2.js"></script>
     <script src="../build/app.js"></script>
   </body>
 </html>
