--- a/typescript-training/src/index.html
+++ b/typescript-training/src/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <p>Hello World!</p>
-    <script src="../build/math1.js"></script>
-    <script src="../build/math2.js"></script>
-    <script src="../build/app.js"></script>
+    <script src="../build/src/math1.js"></script>
+    <script src="../build/src/math2.js"></script>
+    <script src="../build/src/app.js"></script>
+    <script src="../build/src/interface.js"></script>
   </body>
 </html>
